syntax = "proto3";

option java_multiple_files = true;
option java_package = "as.surveillance";
option java_outer_classname = "surveillanceServiceImpl";

package surveillance;

//Interface exported by the server.
service surveillanceService {
	rpc access(accessRequest) returns (accessResponse){}
	
	rpc camera(cameraRequest) returns (cameraResponse){}
	
	rpc fire(fireRequest) returns (fireResponse) {}

}
//request message for entry code
	message  accessRequest {
	int32 code = 1;
	}
	//response message
	message accessResponse {
	string message =1;
	}
	// message request for camera system check
	message cameraRequest {
	string message = 1;
	}
	//response message
	message cameraResponse {
	string message = 1;
	}
	//message request for fire system check
	message fireRequest {
	string message = 1;
	}
	//response message
	message fireResponse {
	string message = 1;
	}
	
	//passing an empty message no server reply, error message
	message Empty{}